src/lc3.js
// Generated by Peggy 1.2.0.
//
// https://peggyjs.org/

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var loc = this.location.source + ":" + s.line + ":" + s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", s.line.toString().length);
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1)
          + peg$padEnd("", last - s.column, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { file: peg$parsefile };
  var peg$startRuleFunction = peg$parsefile;

  var peg$c0 = ".orig";
  var peg$c1 = ".blkw";
  var peg$c2 = ".fill";
  var peg$c3 = ".stringz";
  var peg$c4 = "add";
  var peg$c5 = "and";
  var peg$c6 = "br";
  var peg$c7 = "nzp";
  var peg$c8 = "nz";
  var peg$c9 = "np";
  var peg$c10 = "n";
  var peg$c11 = "zp";
  var peg$c12 = "z";
  var peg$c13 = "p";
  var peg$c14 = "jmp";
  var peg$c15 = "jsrr";
  var peg$c16 = "jsr";
  var peg$c17 = "ldi";
  var peg$c18 = "ldr";
  var peg$c19 = "ld";
  var peg$c20 = "lea";
  var peg$c21 = "not";
  var peg$c22 = "ret";
  var peg$c23 = "rti";
  var peg$c24 = "sti";
  var peg$c25 = "str";
  var peg$c26 = "st";
  var peg$c27 = "trap";
  var peg$c28 = "r";
  var peg$c29 = "getc";
  var peg$c30 = "out";
  var peg$c31 = "putsp";
  var peg$c32 = "puts";
  var peg$c33 = "in";
  var peg$c34 = "halt";
  var peg$c35 = ":";
  var peg$c36 = ".end";
  var peg$c37 = ";";
  var peg$c38 = "\"";
  var peg$c39 = "\\";
  var peg$c40 = "/";
  var peg$c41 = "b";
  var peg$c42 = "f";
  var peg$c43 = "t";
  var peg$c44 = "u";
  var peg$c45 = "x";
  var peg$c46 = "#";
  var peg$c47 = ",";
  var peg$c48 = "\n";

  var peg$r0 = /^[0-7]/;
  var peg$r1 = /^[^: \t\n]/;
  var peg$r2 = /^[a-z0-9_]/i;
  var peg$r3 = /^[^\n]/;
  var peg$r4 = /^[^\0-\x1F"\\]/;
  var peg$r5 = /^[01]/;
  var peg$r6 = /^[0-9a-f]/i;
  var peg$r7 = /^[0-9]/;
  var peg$r8 = /^[\-+]/;
  var peg$r9 = /^[ \t]/;

  var peg$e0 = peg$literalExpectation(".ORIG", true);
  var peg$e1 = peg$literalExpectation(".BLKW", true);
  var peg$e2 = peg$literalExpectation(".FILL", true);
  var peg$e3 = peg$literalExpectation(".STRINGZ", true);
  var peg$e4 = peg$literalExpectation("ADD", true);
  var peg$e5 = peg$literalExpectation("AND", true);
  var peg$e6 = peg$literalExpectation("BR", true);
  var peg$e7 = peg$literalExpectation("nzp", false);
  var peg$e8 = peg$literalExpectation("nz", false);
  var peg$e9 = peg$literalExpectation("np", false);
  var peg$e10 = peg$literalExpectation("n", false);
  var peg$e11 = peg$literalExpectation("zp", false);
  var peg$e12 = peg$literalExpectation("z", false);
  var peg$e13 = peg$literalExpectation("p", false);
  var peg$e14 = peg$literalExpectation("JMP", true);
  var peg$e15 = peg$literalExpectation("JSRR", true);
  var peg$e16 = peg$literalExpectation("JSR", true);
  var peg$e17 = peg$literalExpectation("LDI", true);
  var peg$e18 = peg$literalExpectation("LDR", true);
  var peg$e19 = peg$literalExpectation("LD", true);
  var peg$e20 = peg$literalExpectation("LEA", true);
  var peg$e21 = peg$literalExpectation("NOT", true);
  var peg$e22 = peg$literalExpectation("RET", true);
  var peg$e23 = peg$literalExpectation("RTI", true);
  var peg$e24 = peg$literalExpectation("STI", true);
  var peg$e25 = peg$literalExpectation("STR", true);
  var peg$e26 = peg$literalExpectation("ST", true);
  var peg$e27 = peg$literalExpectation("TRAP", true);
  var peg$e28 = peg$literalExpectation("R", true);
  var peg$e29 = peg$classExpectation([["0", "7"]], false, false);
  var peg$e30 = peg$literalExpectation("GETC", true);
  var peg$e31 = peg$literalExpectation("OUT", true);
  var peg$e32 = peg$literalExpectation("PUTSP", true);
  var peg$e33 = peg$literalExpectation("PUTS", true);
  var peg$e34 = peg$literalExpectation("IN", true);
  var peg$e35 = peg$literalExpectation("HALT", true);
  var peg$e36 = peg$classExpectation([":", " ", "\t", "\n"], true, false);
  var peg$e37 = peg$literalExpectation(":", false);
  var peg$e38 = peg$classExpectation([["a", "z"], ["0", "9"], "_"], false, true);
  var peg$e39 = peg$literalExpectation(".END", true);
  var peg$e40 = peg$literalExpectation(";", false);
  var peg$e41 = peg$classExpectation(["\n"], true, false);
  var peg$e42 = peg$otherExpectation("string");
  var peg$e43 = peg$literalExpectation("\"", false);
  var peg$e44 = peg$literalExpectation("\\", false);
  var peg$e45 = peg$literalExpectation("/", false);
  var peg$e46 = peg$literalExpectation("b", false);
  var peg$e47 = peg$literalExpectation("f", false);
  var peg$e48 = peg$literalExpectation("r", false);
  var peg$e49 = peg$literalExpectation("t", false);
  var peg$e50 = peg$literalExpectation("u", false);
  var peg$e51 = peg$classExpectation([["\0", "\x1F"], "\"", "\\"], true, false);
  var peg$e52 = peg$literalExpectation("x", false);
  var peg$e53 = peg$literalExpectation("#", false);
  var peg$e54 = peg$classExpectation(["0", "1"], false, false);
  var peg$e55 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true);
  var peg$e56 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e57 = peg$classExpectation(["-", "+"], false, false);
  var peg$e58 = peg$otherExpectation("comma");
  var peg$e59 = peg$literalExpectation(",", false);
  var peg$e60 = peg$classExpectation([" ", "\t"], false, false);
  var peg$e61 = peg$otherExpectation("newline");
  var peg$e62 = peg$literalExpectation("\n", false);

  var peg$f0 = function(lines) {
    return {orig, symbols, instructions:lines.filter(x => x)}
  };
  var peg$f1 = function() { return };
  var peg$f2 = function(d) { counter = orig = d; };
  var peg$f3 = function(label, i) {
      const pc = counter;
      if (i) {
        counter += i.size || 1;
      } else {
        i = { op: "LABEL" }
      }
      i.pc = pc;

      if (label) {
        if  (symbols[label] !== undefined) {
          error(`Label "${label}" redifined`);
        }
        symbols[label] = pc;
        i._ = label;
      }

      return i;
    };
  var peg$f4 = function(n) { return {
    op: "BLKW", size: parseInt(n, 10)
  }};
  var peg$f5 = function(fill) { return {
    op: "FILL", fill
  }; };
  var peg$f6 = function(string) { return {
    op:"STRINGZ", string, size: string.length + 1
  }};
  var peg$f7 = function(dr, sr1, rd) { return {
    op: "ADD", dr, sr1, ...rd
  }};
  var peg$f8 = function(dr, sr1, rd) { return {
    op: "AND", dr, sr1, ...rd
  }};
  var peg$f9 = function(nzp, label) { return {
    op: "BR", nzp: nzp || 7, label
  }};
  var peg$f10 = function() { return 7 };
  var peg$f11 = function() { return 6 };
  var peg$f12 = function() { return 5 };
  var peg$f13 = function() { return 4 };
  var peg$f14 = function() { return 3 };
  var peg$f15 = function() { return 2 };
  var peg$f16 = function() { return 1 };
  var peg$f17 = function(br) { return {
    op: "JMP", br
  }};
  var peg$f18 = function(br) { return {
    op: "JSRR", br
  }};
  var peg$f19 = function(label) { return {
    op: "JSR", label
  }};
  var peg$f20 = function(dr, label) { return {
    op: "LDI", dr, label
  }};
  var peg$f21 = function(dr, br, direct) { return {
    op: "LDR", dr, br, direct
  }};
  var peg$f22 = function(dr, label) { return {
    op: "LD", dr, label
  }};
  var peg$f23 = function(dr, label) { return {
    op: "LEA", dr, label
  }};
  var peg$f24 = function(dr, sr) { return {
    op: "NOT", dr, sr
  }};
  var peg$f25 = function() { return {
    op: "JMP", br: 7
  }};
  var peg$f26 = function() { return {
    op: "RTI"
  }};
  var peg$f27 = function(sr, label) { return {
    op: "STI", sr, label
  }};
  var peg$f28 = function(sr, br, direct) { return {
    op: "STR", sr, br, direct
  }};
  var peg$f29 = function(sr, label) { return {
    op: "ST", sr, label
  }};
  var peg$f30 = function(direct) { return {
    op: "TRAP", direct
  }};
  var peg$f31 = function(sr2) { return {sr2} };
  var peg$f32 = function(direct) { return {direct} };
  var peg$f33 = function(r) { return parseInt(r, 10) };
  var peg$f34 = function() { return { op: "TRAP", direct: 0x20 } };
  var peg$f35 = function() { return { op: "TRAP", direct: 0x21 } };
  var peg$f36 = function() { return { op: "TRAP", direct: 0x24 } };
  var peg$f37 = function() { return { op: "TRAP", direct: 0x22 } };
  var peg$f38 = function() { return { op: "TRAP", direct: 0x23 } };
  var peg$f39 = function() { return { op: "TRAP", direct: 0x25 } };
  var peg$f40 = function(lab) { return REGISTER.test(lab) };
  var peg$f41 = function(lab) { return validID(lab) };
  var peg$f42 = function() { return {end: true} };
  var peg$f43 = function(chars) { return chars.join(""); };
  var peg$f44 = function() { return "\b"; };
  var peg$f45 = function() { return "\f"; };
  var peg$f46 = function() { return "\n"; };
  var peg$f47 = function() { return "\r"; };
  var peg$f48 = function() { return "\t"; };
  var peg$f49 = function(digits) {
            return String.fromCharCode(parseInt(digits, 16));
          };
  var peg$f50 = function(sequence) { return sequence; };
  var peg$f51 = function(n) { return parseInt(n, 16) };
  var peg$f52 = function(n) { return parseInt(n, 10) };
  var peg$f53 = function(n) { return parseInt(n, 2) };

  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsefile() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsecommentline();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsecommentline();
    }
    s2 = peg$parseorig();
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = peg$parseline();
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$parseline();
      }
      s4 = peg$parseend();
      if (s4 !== peg$FAILED) {
        s5 = [];
        s6 = peg$parsecommentline();
        while (s6 !== peg$FAILED) {
          s5.push(s6);
          s6 = peg$parsecommentline();
        }
        peg$savedPos = s0;
        s0 = peg$f0(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseline() {
    var s0;

    s0 = peg$parsecommentline();
    if (s0 === peg$FAILED) {
      s0 = peg$parselabel_instruction();
    }

    return s0;
  }

  function peg$parsecommentline() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parsecomment();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseeol();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f1();
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      s2 = peg$parseeol();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f1();
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseorig() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 5).toLowerCase() === peg$c0) {
      s2 = input.substr(peg$currPos, 5);
      peg$currPos += 5;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parsesp();
      if (s3 !== peg$FAILED) {
        s4 = peg$parsedirect();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseeol();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f2(s4);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parselabel_instruction() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseprelabel();
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    s3 = peg$parseinstruction();
    if (s3 === peg$FAILED) {
      s3 = null;
    }
    s4 = peg$parsecomment();
    if (s4 === peg$FAILED) {
      s4 = null;
    }
    s5 = peg$parseeol();
    if (s5 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f3(s2, s3);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseinstruction() {
    var s0;

    s0 = peg$parsememop();
    if (s0 === peg$FAILED) {
      s0 = peg$parseop();
      if (s0 === peg$FAILED) {
        s0 = peg$parsetrap();
      }
    }

    return s0;
  }

  function peg$parsememop() {
    var s0;

    s0 = peg$parseBLKW();
    if (s0 === peg$FAILED) {
      s0 = peg$parseFILL();
      if (s0 === peg$FAILED) {
        s0 = peg$parseSTRINGZ();
      }
    }

    return s0;
  }

  function peg$parseBLKW() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5).toLowerCase() === peg$c1) {
      s1 = input.substr(peg$currPos, 5);
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesp();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseDIGIT();
        if (s4 !== peg$FAILED) {
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseDIGIT();
          }
        } else {
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f4(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseFILL() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5).toLowerCase() === peg$c2) {
      s1 = input.substr(peg$currPos, 5);
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesp();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsedirect();
        if (s3 === peg$FAILED) {
          s3 = peg$parselabelref();
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f5(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSTRINGZ() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 8).toLowerCase() === peg$c3) {
      s1 = input.substr(peg$currPos, 8);
      peg$currPos += 8;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesp();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsestring();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f6(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseop() {
    var s0;

    s0 = peg$parseADD();
    if (s0 === peg$FAILED) {
      s0 = peg$parseAND();
      if (s0 === peg$FAILED) {
        s0 = peg$parseBR();
        if (s0 === peg$FAILED) {
          s0 = peg$parseJMP();
          if (s0 === peg$FAILED) {
            s0 = peg$parseJSRR();
            if (s0 === peg$FAILED) {
              s0 = peg$parseJSR();
              if (s0 === peg$FAILED) {
                s0 = peg$parseLDI();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseLDR();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseLD();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseLEA();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parseNOT();
                        if (s0 === peg$FAILED) {
                          s0 = peg$parseRET();
                          if (s0 === peg$FAILED) {
                            s0 = peg$parseRTI();
                            if (s0 === peg$FAILED) {
                              s0 = peg$parseSTI();
                              if (s0 === peg$FAILED) {
                                s0 = peg$parseSTR();
                                if (s0 === peg$FAILED) {
                                  s0 = peg$parseST();
                                  if (s0 === peg$FAILED) {
                                    s0 = peg$parseTRAP();
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseADD() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
